--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1,3 +1,70 @@
 {
-    "call": "قم بالاتصال"
+    "call": "قم بالاتصال",
+    "email_label": "البريد الإلكتروني / اسم المستخدم",
+    "email_placeholder": "البريد الإلكتروني / اسم المستخدم",
+    "password_label": "كلمة المرور",
+    "password_placeholder": "*****",
+    "forgot_password": "هل نسيت كلمة المرور؟",
+    "no_account": "ليس لديك حساب بعد؟",
+    "register": "تسجيل",
+    "login": "تسجيل الدخول",
+    "search_article": "ابحث عن عنصر",
+    "publish_article": "نشر منتج",
+    "my_ads": "إعلاناتي",
+    "my_sales": "مبيعاتي",
+    "my_purchases": "مشترياتي",
+    "my_cart": "سلتي",
+    "my_favorites": "مفضلاتي",
+    "my_liked": "العناصر التي أعجبتني",
+    "notifications": "الإشعارات",
+    "my_account": "حسابي",
+    "logout": "تسجيل الخروج",
+    "about": "عن الموقع",
+    "home": "الرئيسية",
+    "shopiners_part1": "شوب",
+    "shopiners_part2": "ين",
+    "shopiners_part3": "رز",
+    "how_it_works": "كيف يعمل؟",
+    "how_sell": "كيف تبيع؟",
+    "how_buy": "كيف تشتري؟",
+    "terms_and_conditions": "الشروط والأحكام",
+    "our_pricing_policies": "سياسات التسعير لدينا",
+    "luxury": "فخمة",
+    "luxury2": "الفخامة",
+    "commission_note": "يتم خصم مبلغ العمولة عند دفع المشتري",
+    "pourquoi_choisir": "لماذا تختار",
+    "protection_et_securite": "الحماية والأمان",
+    "protection_description": "يوفر لك شوب<span class=\"color\">إن</span> أدوات عملية مثل الرسائل الخاصة ونظام الإبلاغ لضمان بيئة آمنة ومعاملات موثوقة.",
+    "experience_agreable": "تجربة مريحة!",
+    "experience_description": "سواء كنت تشتري أو تبيع، ستكون تجربتك على شوب<span class=\"color\">إن</span> دائمًا مميزة من خلال خدمة استثنائية وبساطة لا مثيل لها ورضا مضمون.",
+    "livraison_porte_a_porte": "توصيل من الباب إلى الباب",
+    "livraison_description": "سيتوجه مندوب التوصيل مباشرة إلى باب منزلك لاستلام أو توصيل العناصر الخاصة بك. لا مزيد من المتاعب مع البيع عن بُعد!",
+    "generales": "عامة",
+    "contactez_nous": "اتصل بنا",
+    "page_faqs": "صفحة الأسئلة الشائعة",
+    "abonnez_vous": "اشترك",
+    "connexion": "تسجيل الدخول",
+    "informations": "معلومات",
+    "a_propos": "من نحن",
+    "politiques_tarifaires": "سياسات التسعير",
+    "panier_subtotal": "إجمالي السلة",
+     "view_cart": "عرض السلة",
+     "empty_cart": "لا توجد عناصر في سلتك!",
+     "profile_photo_validation": "نود إعلامك أن صورة الملف الشخصي الخاصة بك ستخضع لعملية التحقق، والتي قد تستغرق حتى 24 ساعة كحد أقصى قبل الموافقة عليها.",
+    "thank_you_message": "نشكركم على صبركم وتفهمكم.",
+    "nouveau_sur_shopin_luxury": "جديد على شوب<span class=\"color\">إن</span>",
+    "sort_by": "ترتيب حسب",
+    "low_to_high": "السعر من الأقل إلى الأعلى",
+    "high_to_low": "السعر من الأعلى إلى الأقل",
+    "on_sale": "العناصر المخفضة",
+    "luxury_only": "فقط الفاخرة",
+    "searching_ads": "البحث عن الإعلانات...",
+    "filter_by_condition": "فلتر حسب الحالة",
+    "new_with_tags": "جديد مع العلامات",
+    "new_without_tags": "جديد بدون العلامات",
+    "very_good_condition": "حالة جيدة جداً",
+    "good_condition": "حالة جيدة",
+    "used": "مستعمل"
+
+
 }
