--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -1,3 +1,71 @@
 {
-    "call": "Appelez le"
+    "call": "Appelez le",
+    "email_label": "Adresse E-mail / Pseudonyme",
+    "email_placeholder": "Email / Pseudonyme",
+    "password_label": "Mot de passe",
+    "password_placeholder": "*****",
+    "forgot_password": "Mot de passe oublié ?",
+    "no_account": "Vous n'avez pas encore de compte?",
+    "register": "S'inscrire",
+    "login": "Se connecter",
+    "search_article": "Rechercher un article",
+    "publish_article": "Publier un article",
+    "my_ads": "Mes annonces",
+    "my_sales": "Mes ventes",
+    "my_purchases": "Mes achats",
+    "my_cart": "Mon panier",
+    "my_favorites": "Mes coups de coeur",
+    "my_liked": "Mes favoris",
+    "notifications": "Notifications",
+    "my_account": "Mon compte",
+    "logout": "Déconnexion",
+    "about": "À propos",
+    "home": "Accueil",
+    "shopiners_part1": "Shop",
+    "shopiners_part2": "in",
+    "shopiners_part3": "ers",
+    "how_it_works": "Comment ça marche?",
+    "how_sell": "Comment Vendre ?",
+    "how_buy": "Comment acheter?",
+    "terms_and_conditions": "Conditions générales",
+    "our_pricing_policies": "Nos Politiques Tarifaires",
+    "luxury": "Luxury",
+    "luxury2": "Luxury",
+    "commission_note": "Le montant de la commission est prélévé au moment du paiement par l'acheteur",
+    "pourquoi_choisir": "Pourquoi choisir",
+    "protection_et_securite": "Protection et Sécurité",
+    "protection_description": "SHOP<span class=\"color\">IN</span> vous offre des outils pratiques, comme une messagerie privée et un système de signalement, pour vous garantir un espace sécurisé et des transactions en toute confiance.",
+    "experience_agreable": "Expérience agréable!",
+    "experience_description": "Acheter ou vendre, votre expérience sur SHOPIN sera toujours marquée par un service exceptionnel, une simplicité inégalée et une satisfaction garantie.",
+    "livraison_porte_a_porte": "Livraison porte à porte",
+    "livraison_description": "Un livreur se rendra directement à votre porte pour récupérer ou livrer vos articles. Fini le casse-tête de la vente à distance!",
+    "generales": "Générales",
+    "contactez_nous": "Contactez-nous",
+    "page_faqs": "Page FAQs",
+    "abonnez_vous": "Abonnez-vous",
+    "connexion": "Connexion",
+    "informations": "Informations",
+    "a_propos": "À propos",
+    "politiques_tarifaires": "Politiques Tarifaires",
+    "panier_subtotal": "Sous-total du panier",
+    "view_cart": "Voir le panier",
+    "empty_cart": "Aucun article dans votre panier !",
+    "profile_photo_validation": "Nous vous informons que votre photo de profil sera soumise à un processus de validation, qui prendra jusqu'à un maximum de 24 heures avant d'être approuvée.",
+    "thank_you_message": "Nous vous remercions pour votre patience et votre compréhension.",
+    "nouveau_sur_shopin_luxury": "Nouveau Sur SHOP<span class=\"color\">IN</span>",
+    "sort_by": "Trier par",
+    "low_to_high": "Prix croissant",
+    "high_to_low": "Prix décroissant",
+    "on_sale": "Articles Soldés",
+    "luxury_only": "Luxury uniquement",
+    "searching_ads": "Recherche d'annonces...",
+    "filter_by_condition": "Filtrer par état",
+    "new_with_tags": "Neuf avec étiquettes",
+    "new_without_tags": "Neuf sans étiquettes",
+    "very_good_condition": "Très bon état",
+    "good_condition": "Bon état",
+    "used": "Usé"
+
+
+
 }
