--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -3,7 +3,6 @@
     "email_label": "البريد الإلكتروني / اسم المستخدم",
     "email_placeholder": "البريد الإلكتروني / اسم المستخدم",
     "password_label": "كلمة المرور",
-    "password_placeholder": "*****",
     "forgot_password": "هل نسيت كلمة المرور؟",
     "no_account": "ليس لديك حساب بعد؟",
     "register": "تسجيل",
@@ -64,7 +63,38 @@
     "new_without_tags": "جديد بدون العلامات",
     "very_good_condition": "حالة جيدة جداً",
     "good_condition": "حالة جيدة",
-    "used": "مستعمل"
+    "used": "مستعمل",
+    "all_items_in_category": "جميع العناصر في هذه الفئة",
+    "back_to_subcategories": "العودة إلى قائمة الفئات الفرعية",
+    "login_to_sell_and_buy": "تسجيل الدخول للبيع والشراء على شوب<span class=\"color\">إن</span>",
+    "nom": "الاسم",
+  "prenom": "اللقب",
+  "pseudonyme": "الاسم المستعار",
+  "telephone": "رقم الهاتف",
+  "genre": "الجنس",
+  "date_naissance": "تاريخ الميلاد",
+  "email": "البريد الإلكتروني",
+  "ville": "المدينة",
+  "rue": "الشارع",
+  "batiment": "اسم المبنى",
+  "etage": "الطابق",
+  "num_appartement": "رقم الشقة",
+  "mot_de_passe": "كلمة المرور",
+  "confirmation_mot_de_passe": "تأكيد كلمة المرور",
+  "conditions": "الشروط والأحكام",
+  "inscription": "التسجيل",
+  "receive_notifications": "يمكنك تلقي رسائل نصية أو رسائل بريد إلكتروني للتحديثات. يمكنك إلغاء الاشتراك في أي وقت.",
+  "phone_placeholder": "00 00 00 00 00",
+  "password_placeholder": "كلمة المرور",
+  "show_password": "عرض كلمة المرور",
+  "password_min_length": "يجب أن تتكون كلمة المرور من 8 أحرف على الأقل.",
+  "nom_batiment": "اسم المبنى",
+  "terms_condition": "يرجى قراءة شروطنا العامة بعناية والموافقة عليها قبل المتابعة.",
+  "accept_conditions": "أنا أوافق على <a href=\"/conditions\" target=\"__blank\" style=\"color: black;\"><b>الشروط والأحكام</b></a>.",
+  "sign_up": "التسجيل",
+  "male": "ذكر",
+    "female": "أنثى"
+
 
 
 }
