--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -2,7 +2,6 @@
     "email_label": "Email Address / Username",
     "email_placeholder": "Email / Username",
     "password_label": "Password",
-    "password_placeholder": "*****",
     "forgot_password": "Forgot password?",
     "no_account": "Don't have an account yet?",
     "register": "Register",
@@ -63,6 +62,36 @@
     "new_without_tags": "New without tags",
     "very_good_condition": "Very good condition",
     "good_condition": "Good condition",
-    "used": "Used"
+    "used": "Used",
+     "all_items_in_category": "All items in this category",
+    "back_to_subcategories": "Back to the subcategories list",
+    "login_to_sell_and_buy": "Log in to sell and buy on SHOP<span class=\"color\">IN</span>",
+    "nom": "First Name",
+    "prenom": "Last Name",
+    "pseudonyme": "Username",
+    "telephone": "Phone Number",
+    "genre": "Gender",
+    "date_naissance": "Date of Birth",
+    "email": "Email Address",
+    "ville": "City",
+    "rue": "Street",
+    "batiment": "Building Name",
+    "etage": "Floor",
+    "num_appartement": "Apartment Number",
+    "mot_de_passe": "Password",
+    "confirmation_mot_de_passe": "Confirm Password",
+    "conditions": "Terms and Conditions",
+    "inscription": "Register",
+    "receive_notifications": "You may receive SMS or email notifications for updates. You can unsubscribe at any time.",
+    "phone_placeholder": "00 00 00 00 00",
+    "password_placeholder": "Password",
+    "show_password": "Show Password",
+    "password_min_length": "Password must be at least 8 characters.",
+    "nom_batiment": "Building Name",
+    "terms_condition": "Please read carefully and accept our terms and conditions before continuing.",
+    "accept_conditions": "I accept the <a href=\"/conditions\" target=\"__blank\" style=\"color: black;\"><b>Terms and Conditions</b></a>.",
+    "sign_up": "Sign Up",
+    "male": "Male",
+    "female": "Female"
 
 }
