--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -3,7 +3,6 @@
     "email_label": "Adresse E-mail / Pseudonyme",
     "email_placeholder": "Email / Pseudonyme",
     "password_label": "Mot de passe",
-    "password_placeholder": "*****",
     "forgot_password": "Mot de passe oublié ?",
     "no_account": "Vous n'avez pas encore de compte?",
     "register": "S'inscrire",
@@ -64,8 +63,36 @@
     "new_without_tags": "Neuf sans étiquettes",
     "very_good_condition": "Très bon état",
     "good_condition": "Bon état",
-    "used": "Usé"
-
-
+    "used": "Usé",
+    "all_items_in_category": "Tout les articles de cette catégorie",
+    "back_to_subcategories": "Retour à la liste des sous-catégories",
+    "login_to_sell_and_buy": "Connectez-vous pour vendre et acheter sur SHOP<span class=\"color\">IN</span>",
+    "nom": "Nom",
+  "prenom": "Prénom",
+  "pseudonyme": "Pseudonyme",
+  "telephone": "Numéro de téléphone",
+  "genre": "Genre",
+  "date_naissance": "Date de naissance",
+  "email": "Adresse email",
+  "ville": "Ville",
+  "rue": "Rue",
+  "batiment": "Nom Bâtiment",
+  "etage": "Étage",
+  "num_appartement": "Numéro appartement",
+  "mot_de_passe": "Mot de passe",
+  "confirmation_mot_de_passe": "Confirmation du mot de passe",
+  "conditions": "Conditions générales",
+  "inscription": "S'inscrire",
+  "receive_notifications": "Vous pourrez recevoir des SMS ou des e-mails pour des mises à jour. Vous pouvez vous désabonner à tout moment.",
+  "phone_placeholder": "00 00 00 00 00",
+  "password_placeholder": "Mot de passe",
+  "show_password": "Afficher le mot de passe",
+  "password_min_length": "Le mot de passe doit comporter au moins 8 caractères.",
+  "nom_batiment": "Nom Bâtiment",
+  "terms_condition": "Veuillez lire attentivement et accepter nos conditions générales avant de continuer.",
+  "accept_conditions": "J'accepte les <a href=\"/conditions\" target=\"__blank\" style=\"color: black;\"><b>Conditions générales</b></a>.",
+  "sign_up": "S'inscrire",
+  "male": "Homme",
+    "female": "Femme"
 
 }
