--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -31,7 +31,7 @@
     "luxury": "فخمة",
     "luxury2": "الفخامة",
     "commission_note": "يتم خصم مبلغ العمولة عند دفع المشتري",
-    "pourquoi_choisir": "لماذا تختار",
+    "pourquoi_choisir": "لماذا تختار شوب<span class=\"color\">إن</span>",
     "protection_et_securite": "الحماية والأمان",
     "protection_description": "يوفر لك شوب<span class=\"color\">إن</span> أدوات عملية مثل الرسائل الخاصة ونظام الإبلاغ لضمان بيئة آمنة ومعاملات موثوقة.",
     "experience_agreable": "تجربة مريحة!",
