--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -30,7 +30,7 @@
     "luxury": "Luxury",
     "luxury2": "Luxury",
     "commission_note": "The commission amount is deducted at the time of payment by the buyer",
-    "pourquoi_choisir": "Why Choose",
+    "pourquoi_choisir": "Why Choose SHOP<span class=\"color\">IN</span>",
     "protection_et_securite": "Protection and Security",
     "protection_description": "SHOP<span class=\"color\">IN</span> offers you practical tools, such as private messaging and a reporting system, to ensure a secure environment and trustworthy transactions.",
     "experience_agreable": "Pleasant Experience!",
