--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -31,7 +31,7 @@
     "luxury": "Luxury",
     "luxury2": "Luxury",
     "commission_note": "Le montant de la commission est prélévé au moment du paiement par l'acheteur",
-    "pourquoi_choisir": "Pourquoi choisir",
+    "pourquoi_choisir": "Pourquoi choisir SHOP<span class=\"color\">IN</span>",
     "protection_et_securite": "Protection et Sécurité",
     "protection_description": "SHOP<span class=\"color\">IN</span> vous offre des outils pratiques, comme une messagerie privée et un système de signalement, pour vous garantir un espace sécurisé et des transactions en toute confiance.",
     "experience_agreable": "Expérience agréable!",
