--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -93,7 +93,8 @@
   "accept_conditions": "أنا أوافق على <a href=\"/conditions\" target=\"__blank\" style=\"color: black;\"><b>الشروط والأحكام</b></a>.",
   "sign_up": "التسجيل",
   "male": "ذكر",
-    "female": "أنثى"
+    "female": "أنثى",
+    "seller": "البائع"
 
 
 
