--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -94,6 +94,31 @@
   "sign_up": "S'inscrire",
   "male": "Homme",
 "female": "Femme",
-"seller": "Vendeur"
+"seller": "Vendeur",
+"title": "Voilà le SHOP<span class=\"color\">IN</span>ER",
+  "SHOPIN_LUXURY": "SHOPIN LUXURY",
+  "Frais de Livraison": "Frais de Livraison",
+  "Ajouter": "Ajouter au panier",
+"Retire": "Rétiré du panier",
+"Réduire le prix": "Réduire le prix",
+    "Ajouter aux favoris": "Ajouter aux favoris",
+    "Retirer des favoris": "Retirer des favoris",
+    "Signaler cette annonce": "Signaler cette annonce",
+    "Vous avez déjà signalé cette annonce !": "Vous avez déjà signalé cette annonce !",
+    "Détails": "Détails",
+    "Condition": "Condition",
+    "Catégorie": "Catégorie",
+    "Région": "Région",
+    "Publié le": "Publié le",
+    "Description": "Description",
+    "Aucune description disponible !": "Aucune description disponible !",
+    "Voilà le SHOPINER": "Voilà le SHOPINER",
+    "avis": "avis",
+    "Ventes": "Ventes",
+    "Annonces": "Annonces",
+    "Articles similaires": "Articles similaires",
+    "title2": "Articles de <span class=\"ft-bold\">SHOP<span class=\"color\">IN</span>ER</span>",
+    "currency": "DH"
+
 
 }
