--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -146,7 +146,14 @@
   "send_report": "إرسال التقرير",
   "reason":"السبب",
   "caractères":"حرف",
-  "Noter":"تقييم الشو<span class=\"color\">ب</span>ينر"
+  "Noter":"تقييم الشو<span class=\"color\">ب</span>ينر",
+  "recent_purchase": "أحدث عملية شراء لك مع :username كانت في :date",
+    "product_title": "المنتج: :title",
+    "rating": "التقييم: :stars / 5",
+    "leave_review_info": "يمكنك ترك مراجعة على شكل نجوم فقط إذا قمت بالشراء من هذا البائع!",
+    "no_more_review": "لا يمكنك ترك مراجعة لأنك قد قمت بذلك بالفعل!",
+    "attention": "تحذير!",
+    "rate_button": "قيم :star"
 
 
 }
