--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -146,7 +146,18 @@
   "leave_review_info": "Vous pouvez laisser un avis sous forme d'étoiles uniquement si vous avez effectué un achat auprès de ce vendeur !",
   "no_more_review": "Vous ne pouvez plus laisser un avis car vous l'avez déjà fait !",
   "attention": "Attention !",
-  "rate_button": "Notez :star"
+  "rate_button": "Notez :star",
+  "contact": "Contact",
+  "chat": "Chat",
+    "call1": "Appelez-le",
+    "email1": "Email",
+    "find_shopiner_on": "Trouvez SHOP<span class=\"color\">IN</span> sur",
+    "leave_us_message": "Laissez-nous votre message ici",
+    "your_name": "Votre nom *",
+    "your_email_address": "Votre adresse email *",
+    "subject": "Sujet",
+    "message": "Message",
+    "send_message": "Envoyer le message"
 
 
 
